Bootstrap, Board Page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,10 +1,14 @@
 //=require_tree ./mixins
-@import "mixins/animation";
-@import "mixins/grid";
-@import "mixins/placeholder";
-@import "mixins/layout";
-@import "mixins/text";
+//=require bootstrap/dist/css/bootstrap
+@import "mixins/*";
+@import 'colors';
 @import 'global';
+@import 'navigation';
+@import 'footer';
+@import 'newsletter';
+@import 'wrapper';
+@import 'hero';
+@import 'quotes';
 @import 'home';
 @import 'themes';
 @import 'forms';
