--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -36,6 +36,8 @@
     <%= f.text_field :video_uri %>
   </div>
 
+  <%= render "shared/form_sections", form: f %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
