--- a/app/views/admin/lessons/edit.html.erb
+++ b/app/views/admin/lessons/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Admin Lesson</h1>
+<%= link_to 'Back', admin_lessons_path %>
+<h1>Editing Lesson</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @admin_lesson %> |
-<%= link_to 'Back', admin_lessons_path %>
