--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Admin Project</h1>
+<%= link_to 'Back', admin_projects_path %>
+<h1>Editing Project</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @admin_project %> |
-<%= link_to 'Back', admin_projects_path %>
