--- a/app/views/admin/standards/edit.html.erb
+++ b/app/views/admin/standards/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Admin Standard</h1>
+<%= link_to 'Back', admin_standards_path %>
+<h1>Editing Standard</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @admin_standard %> |
-<%= link_to 'Back', admin_standards_path %>
