--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -1,6 +1,5 @@
 <% content_for(:page_title) { ('Partners') } %>
-<div class="wrapper">
-<h1>Partners</h1>
+<h1 class="title">Partners</h1>
 
 <%= image_tag 'partners/pdx-child-art-studio.jpg', class:'partners-image' %>
 <h2> Portland Child Art Studio</h2>
@@ -11,4 +10,3 @@
 <p>Through them, we are able to workshop our projects in actual classes before they are offered online. View available classes here.</p>
 
 <p>If you are interested in signing up for a class, please use the contact page.</p>
-</div>
