--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,9 +1,5 @@
-
-.admin-wrapper {
-  margin-left: 250px;
-  padding: 2em;
-}
-
+// Admin
+//
 .admin-nav {
   background-color: $accent-purple;
   position: fixed;
@@ -13,22 +9,57 @@
   bottom: 0px;
 
   ul {
-    padding: 2em;
     list-style: none;
+  }
+
+  li {
+    padding: 0.6em 1.1em;
+    &:hover, &.current {
+      cursor: pointer;
+      background-color: rgba(black, 0.2);
+      a, a:visited {
+        color: rgba(white, 1.0);
+      }
+    }
+    a, a:visited {
+      font-size: 14px;
+      font-weight: 500;
+      color: rgba(white, 0.6);
+      transition: 200ms ease;
+      text-decoration: none;
+    }
   }
 }
 
-.admin-nav-item {
-  padding: 0.5em;
-  font-size: 14px;
-  font-weight: 500;
+.admin-nav .brand {
+  width: 30%;
+  margin: 0 auto;
+  opacity: 0.6;
+  @include ease;
+  &:hover {
+    opacity: 1;
+  }
+}
 
-  a, a:visited {
-    color: rgba(white, 0.6);
-    transition: 200ms ease;
+.admin-wrapper {
+  margin-left: 250px;
+  padding: 20px;
+  @include primary-font;
 
-    &:hover, &:active {
-      color: rgba(white, 1.0);
-    }
+  h1, h2, h3, h4, h5, h6, p {
+    padding: 0;
+    margin: 0;
+  }
+
+  h1 { margin-bottom: 0.2em;}
+  h2 { margin-bottom: 0.2em;}
+  h3 { margin-bottom: 0.3em;}
+  h4 { margin-bottom: 0.5em;}
+  h5 { margin-bottom: 0.6em;}
+  h6 { margin-bottom: 0.7em;}
+  p { margin: 0.5em 0; }
+
+  .inline {
+    display: inline;
   }
 }
