--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,1 +1,8 @@
 <h1>Admin Here!</h1>
+<h2>Second</h2>
+<h3>Third</h3>
+<h4>Fourth</h4>
+<h5>Fifth</h5>
+<h6>Sixth</h6>
+<p>Paragraph here</p>
+<p>Second Paragraph here</p>
