--- a/app/views/admin/lessons/index.html.erb
+++ b/app/views/admin/lessons/index.html.erb
@@ -1,11 +1,13 @@
-<p id="notice"><%= notice %></p>
+<%= render "shared/alert", alert: notice %>
+<h1 class="inline">Lessons</h1>
+<%= link_to 'New Lesson', new_admin_lesson_path, class: "btn btn-blue pull-right" %>
 
-<h1>Listing Lessons</h1>
-
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Project Title</th>
+      <th>Academy</th>
+      <th>Lesson Title</th>
       <th colspan="2">Actions</th>
     </tr>
   </thead>
@@ -13,6 +15,8 @@
   <tbody>
     <% @lessons.each do |lesson| %>
       <tr>
+        <td><%= lesson.project.title %></td>
+        <td><%= lesson.project.academy %></td>
         <td><%= lesson.title %></td>
         <td><%= link_to 'Show', admin_lesson_path(lesson) %></td>
         <td><%= link_to 'Edit', edit_admin_lesson_path(lesson) %></td>
@@ -23,4 +27,3 @@
 
 <br>
 
-<%= link_to 'New Lesson', new_admin_lesson_path %>
