--- a/app/views/admin/members/edit.html.erb
+++ b/app/views/admin/members/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Admin Member</h1>
+<%= link_to 'Show', admin_member_path(@member) %> |
+<%= link_to 'Back', admin_members_path %>
+<h1>Editing Member</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @admin_member %> |
-<%= link_to 'Back', admin_members_path %>
