--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -1,4 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_admin_member_path(@admin_member) %> |
+<%= link_to 'Edit', edit_admin_member_path(@member) %> |
 <%= link_to 'Back', admin_members_path %>
+<p id="notice"><%= notice %></p>
+<%= image_tag @member.avatar.url(:thumb) %>
+<h2>Name: <%= @member.name %></h2>
+<h3>Position: <%= @member.position %></h2>
+<h3>Role: <%= @member.role %></h2>
+<h3>Bio</h3>
+<%= markdown @member.bio %>
+
