--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,20 +1,26 @@
-<p id="notice"><%= notice %></p>
+<%= render "shared/alert", alert: notice %>
 
-<h1>Listing Admin Projects</h1>
+<h1 class="inline">Project Levels</h1>
+<%= link_to 'New Project', new_admin_project_path, class: "btn btn-blue pull-right" %>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Title</th>
+      <th>Academy</th>
+      <th>Updated</th>
+      <th colspan="2">Actions</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @admin_projects.each do |admin_project| %>
+    <% @projects.each do |project| %>
       <tr>
-        <td><%= link_to 'Show', admin_project %></td>
-        <td><%= link_to 'Edit', edit_admin_project_path(admin_project) %></td>
-        <td><%= link_to 'Destroy', admin_project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= project.title %></td>
+        <td><%= project.academy %></td>
+        <td><%= "#{time_ago_in_words(project.updated_at)} ago".titleize %></td>
+        <td><%= link_to 'Show', admin_project_path(project) %></td>
+        <td><%= link_to 'Edit', edit_admin_project_path(project) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +28,3 @@
 
 <br>
 
-<%= link_to 'New Project', new_admin_project_path %>
