--- a/app/views/admin/standards/index.html.erb
+++ b/app/views/admin/standards/index.html.erb
@@ -1,8 +1,9 @@
-<p id="notice"><%= notice %></p>
+<%= render "shared/alert", alert: notice %>
 
-<h1>Listing Standards</h1>
+<h1 class="inline">Standards</h1>
+<%= link_to 'New Standard', new_admin_standard_path, class: "btn btn-blue pull-right" %>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Project</th>
@@ -22,4 +23,3 @@
 
 <br>
 
-<%= link_to 'New Standard', new_admin_standard_path, class: "btn btn-blue" %>
