--- a/app/views/admin/standards/new.html.erb
+++ b/app/views/admin/standards/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Admin Standard</h1>
+<%= link_to 'Back', admin_standards_path %>
+<h1>New Standard</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', admin_standards_path %>
