--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,9 @@
 //=require_tree ./mixins
-//=require bootstrap/dist/css/bootstrap
+//= require bootstrap/dist/css/bootstrap
+//= require uikit/css/uikit
+//= require codemirror/lib/codemirror
+//= require uikit/css/components/htmleditor
+
 @import "mixins/*";
 @import 'colors';
 @import 'global';
@@ -9,6 +13,7 @@
 @import 'wrapper';
 @import 'hero';
 @import 'quotes';
+@import 'aside';
 @import 'home';
 @import 'themes';
 @import 'forms';
