--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,6 +1,7 @@
 // Miscellaenous variables
 //
-$content-max-width: 800px;
+$content-max-width: 960px;
+$homepage-max-width: 860px;
 $content-min-width: 480px;
 
 // Elements
@@ -31,12 +32,12 @@ a, a:visited {
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
 img.height {
-  height: 100%;
+  max-height: 100%;
   width: auto;
 }
 
