--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -1,4 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_admin_project_path(@project) %> |
-<%= link_to 'Back', admin_projects_path %>
+<h1 class="inline">Project Level</h1>
+<%= link_to 'Edit', edit_admin_project_path(@project), class: "btn btn-blue pull-right" %>
+<p><%= image_tag @project.inspiration_image.url(:thumb) %></p>
+<p>Title: <%= @project.title %></p>
+<p>Academy: <%= @project.academy %></p>
+<h3>Overview</h3>
+<p>
+  <% if @project.overview.present? %> 
+  <%= link_to "#{@project.academy} Overview PDF", @project.overview.url %>
+  <% else %>
+  <%= "#{@project.academy} Overview PDF Not Found" %>
+  <% end %>
+</p>
+<% @project.sections.each do |section| %>
+  <div class="well">
+    <%= section.content %> 
+  </div>
+<% end %>
