--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -29,11 +29,11 @@
       <div class="btn-group">
         <div class="btn btn-academy" data-level="upper">
           Upper Academy
-          <div class="btn-info">Approx. 9-11 yrs</div>
+          <div class="academy-info">Approx. 9-11 yrs</div>
         </div>
         <div class="btn btn-academy" data-level="lower">
           Lower Academy
-          <div class="btn-info">Approx. 6-8 yrs</div>
+          <div class="academy-info">Approx. 6-8 yrs</div>
         </div>
       </div>
     </div>
