--- a/app/views/admin/_navigation.html.erb
+++ b/app/views/admin/_navigation.html.erb
@@ -5,12 +5,13 @@
     <% end %>
   </div>
   <ul>
-    <%= nav_link "Pages", admin_pages_path %></li>
-    <%= nav_link "Projects", admin_project_sets_path %></li>
-    <%= nav_link "Project Levels", admin_projects_path %></li>
-    <%= nav_link "Standards", admin_standards_path %></li>
-    <%= nav_link "Lessons", admin_lessons_path %></li>
-    <%= nav_link "Galleries", admin_galleries_path %></li>
-    <%= nav_link "Members", admin_members_path %></li>
+    <%= nav_link "Pages", admin_pages_path %>
+    <%= nav_link "Projects", admin_project_sets_path %>
+    <%= nav_link "Project Levels", admin_projects_path %>
+    <%= nav_link "Standards", admin_standards_path %>
+    <%= nav_link "Lessons", admin_lessons_path %>
+    <%= nav_link "Galleries", admin_galleries_path %>
+    <%= nav_link "Members", admin_members_path %>
+    <%= nav_link "Supply Items", admin_supply_items_path %>
   </ul>
 </nav>
