--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -1,4 +1,12 @@
-<p id="notice"><%= notice %></p>
+<%= render "shared/alert", alert: notice %>
+<%= render "shared/alert", alert: @status_notice, level: @level %>
 
-<%= link_to 'Edit', edit_admin_page_path(@page) %> |
-<%= link_to 'Back', admin_pages_path %>
+<h1 class="inline">Page</h1>
+<%= link_to 'Edit', edit_admin_page_path(@page), class: "btn btn-blue pull-right" %>
+<p>Title: <%= @page.title %></p>
+<p>Slug: <%= link_to "/page/#{@page.slug}", "/page/#{@page.slug}" %></p>
+<p>Hero Content: <%= @page.hero_content %></p>
+<p>Hero Image: <%= image_tag @page.hero_image.url(:thumb) %></p>
+<div class="well">
+  <%= markdown @page.content %>
+</div>
