--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/alert", alert: notice %>
 
 <h1 class="inline">Project Levels</h1>
-<%= link_to 'New Project', new_admin_project_path, class: "btn btn-blue pull-right" %>
+<%= link_to 'New Project', new_admin_project_set_path, class: "btn btn-blue pull-right" %>
 
 <table class="table table-hover">
   <thead>
