--- a/app/views/admin/standards/index.html.erb
+++ b/app/views/admin/standards/index.html.erb
@@ -7,6 +7,7 @@
   <thead>
     <tr>
       <th>Project</th>
+      <th>Academy</th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -15,6 +16,7 @@
     <% @standards.each do |standard| %>
       <tr>
         <td><%= standard.project.title %></td>
+        <td><%= standard.project.academy %></td>
         <td><%= link_to 'Edit', edit_admin_standard_path(standard) %></td>
       </tr>
     <% end %>
