--- a/app/views/home/classes.html.erb
+++ b/app/views/home/classes.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:page_title) { ('PDX Classes') } %>
 
 <section class="wrapper">
-  <h1>PDX Classes</h1>
+  <h1 class="title">PDX Classes</h1>
 
   <p class="lead">
   Through a partnership with the <%= link_to "Portland Child Art Studio", partners_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland Community. Class size is very limited, so <%= link_to "contact us", contact_path %> to check availability. 
