--- a/app/views/shared/_video.html.erb
+++ b/app/views/shared/_video.html.erb
@@ -1,2 +1,4 @@
 <% iframe_url = "https://player.vimeo.com/video/#{@video_id}" %>
-<iframe src="<%= iframe_url %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="<%= iframe_url %>" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
